--- a/testBottomSheet/android/app/src/main/res/values/strings.xml
+++ b/testBottomSheet/android/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
 <resources>
 
     <string name="app_name">Flutter Firebase Auth Practice</string>
-    <string name="facebook_app_id">##################</string>
-    <string name="fb_login_protocol_scheme">###############</string>
+    <string name="facebook_app_id">##############</string>
+    <string name="fb_login_protocol_scheme">############</string>
 
 </resources>
    
